# plagiarismDetection

./: .gitignore  README.md
clion/: CMakeLists.txt
clion/headers/: Compare.h  basicLexicalAnalyzer.h  lexicalAnalyzer.h  removeDuplicates.h  simpleCompare.h
clion/includes/: Includes.h  simpleCompare.cpp
clion/src/: Compare.cpp  basicLexicalAnalyzer.cpp  lexicalAnalyzer.cpp  main.cpp  removeDuplicates.cpp  simpleCompare.cpp
headers/: Compare.h
includes/: Includes.h
qt/Testing/: Testing.pro
qt/Testing/Cli/: Cli.pro
qt/Testing/Tests/: Tests.pro
qt/Testing/Utils/: Compare.h  removeDuplicates.h  simpleCompare.h  utils.h
qt/Testing/utils/: Compare.cpp  Compare.h  Includes.h  basicLexicalAnalyzer.h  lexicalAnalyzer.h  removeDuplicates.cpp  simpleCompare.h  utils.cpp  utils.h  (+1 more)
qt/build-Testing-Desktop-Debug/: Makefile
qt/build-plagiarism-Desktop-Debug/: Makefile  moc_mainwindow.cpp  plagiarism  ui_mainwindow.h
qt/plagiarism/: Compare.cpp  Compare.h  Includes.h  basicLexicalAnalyzer.cpp  basicLexicalAnalyzer.h  differencewindow.cpp  differencewindow.h  differencewindow.ui  kot  kot.txt  lexicalAnalyzer.cpp  lexicalAnalyzer.h  main.cpp  mainCompare2Files.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  plagiarism.pro  plagiarism.pro.user.6437f7a  plagiarism.pro.user.69e98fa.4.9-pre1  plagiarism.pro.user.e2616b0.22  removeDuplicates.cpp  removeDuplicates.h  simpleCompare.cpp  simpleCompare.h
src/: Compare.cpp  main.cpp
txtFiles/: test1.txt  test2.txt  test4.cpp
uml/: algorithms.puml  app.puml  app02.puml
(+45 files in other folders)
