cmake_minimum_required(VERSION 3.15)
project(oop_2019_aplikacja_do_wykrywania_plagiatow_w_kodzie_zrodlowym)
set(CMAKE_CXX_STANDARD 14)
set(HEADERS includes/Includes.h headers/simpleCompare.h headers/Compare.h headers/removeDuplicates.h headers/basicLexicalAnalyzer.h headers/lexicalAnalyzer.h)
set(SOURCES src/Compare.cpp  src/simpleCompare.cpp src/removeDuplicates.cpp src/basicLexicalAnalyzer.cpp src/lexicalAnalyzer.cpp)
add_library(plagiarism_lib ${HEADERS} ${SOURCES} )
add_executable(plagiarism src/main.cpp headers/Compare.h includes/Includes.h src/Compare.cpp)
target_link_libraries(plagiarism plagiarism_lib)
